DOC - First version of final version

--- a/Doc/Bachelor Thesis/anotation.tex
+++ b/Doc/Bachelor Thesis/anotation.tex
@@ -22,7 +22,7 @@ Vedúci práce: \Supervisor \\
 \Month \Year \\
 \noindent
 \\
-Sme zavalení množstvom informácií z rôznych zdrojov. Vo výučbe je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu informácií a tvorbu poznámok z textu, ktoré sú dôležité z pohľadu výučby, a umožní študentom vytvárať personalizované poznámky. Využívame hlavne syntaktickú analýzu textu. Poznámky sa vytvárajú pomocou využitia značiek slovných druhov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, ktoré sa vytvárajú na základe pravidiel naučených od používateľa.
+Sme zavalení množstvom informácií z rôznych zdrojov. V procese výučby je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu informácií a tvorbu poznámok z textu, ktoré sú dôležité z pohľadu výučby. Systém umožní študentom vytvárať personalizované poznámky. Využívame najmä syntaktickú analýzu textu a poznámky sa vytvárajú pomocou využitia značiek slovných druhov, názvoslovných entít, lema tvarov slov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, ktoré sa vytvárajú na základe pravidiel naučených od používateľa. Pravidlo sa skladá najmä zo závislostí, je závislé od štruktúry viet a aplikovateľné na viacero viet. Overili sme eliminovanie irelevantných informácií pomocou pravidiel, aplikovanie pravidiel na viacero viet a zlepšovanie systému zo zvyšujúcim sa počtom pravidiel z hľadiska spoľahlivosti a personalizácie.
 \newpage
 \thispagestyle{plain}
 \begin{center}
@@ -44,8 +44,7 @@ Author: \Author \\
 	{Master thesis: }\Title \\
 }
 Supervisor: \Supervisor \\
-\Month \Year \\
+May \Year \\
 \noindent
 \\
-We are overwhelmed by information from various topics. The challenge in education is to create notes which covers important subset of information. There are known methods to extract information from text. In this
-thesis we propose a system to extract the notes from text which are important for educational purpose, so it should create personalized notes for students. We use mainly syntactic text analysis. Notes are created by help of part-of-speech tags and dependencies between words in sentences. The outcome is an interactive system for creating notes based on learned rules from user.
+We are overwhelmed by information from various topics. The challenge in education is to create notes which cover important subset of information. There are known methods to extract information from text. In this thesis we propose a system to extract the notes from text which are important for educational purpose. System allows students to create personalized notes. We use mainly syntactic text analysis and the notes are created by help of part-of-speech tags, named entities, lemmas and dependencies between words in sentences. The outcome is an interactive system for creating notes based on the learned rules from the user. The rule consists mainly from dependencies, depends on the structure of sentence and is applicable on various sentences. We verified the eleimination of the irelevant information by the rules, aplication of the rules on various sentences and enhancements to reliability and personalization by the increased amount of the rules.
