--- a/Doc/Bachelor Thesis/declaration.tex
+++ b/Doc/Bachelor Thesis/declaration.tex
@@ -7,7 +7,7 @@
 \textbf{POĎAKOVANIE} \\
 \end{large}
 \noindent
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.....
+Chcem sa poďakovať môjmu vedúcemu Ing. Miroslavovi Blštákovi za odbornú pomoc, cenné rady, veľkú ochotu a nasmerovanie ma pri písaní práce. Taktiež by som sa chcel poďakovať ľudom, ktorí sa zúčastnili používateľského experimentu a všetkým, ktorí akokoľvek pomohli pri tvorbe tejto práce.
 \newpage
 \thispagestyle{plain}
 \vspace*{15cm} 
@@ -18,5 +18,5 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 \end{large}
 \noindent
 Čestne prehlasujem, že bakalársku prácu s názvom: Spracovanie učebných textov som vypracoval samostatne, na základe konzultácií a štúdia odbornej literatúry. Neporušila som autorský zákon a zoznam použitej literatúry som uviedol na príslušnom mieste.\vspace*{0.5cm}\\
-\hspace*{10cm}............................\\
+\hspace*{10cm}...................................\\
 \hspace*{10.7cm} \Author
